tester, GET user, auth changes
